--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
+dj-database-url==0.3.0
+dj-static==0.0.6
 Django==1.9
 gunicorn==19.4.5
+pystache==0.5.4
+static==1.1.1
+static3==0.6.1
 wheel==0.24.0
