--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,7 @@ Django==1.9
 django-postgrespool==0.3.0
 gunicorn==19.3.0
 psycopg2==2.6
+requests==2.9.1
 SQLAlchemy==1.0.4
+wheel==0.24.0
 whitenoise==2.0.2
